--- a/App.xaml
+++ b/App.xaml
@@ -38,6 +38,9 @@
             <DataTemplate DataType="{x:Type viewRaid:GuildRaid}">
                 <viewRaid:GuildRaid/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:ProfilesModel}">
+                <view:ProfilesRaid/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
