--- a/MVVM/View/Raid.xaml
+++ b/MVVM/View/Raid.xaml
@@ -154,9 +154,9 @@
             <Border Width="100" Height="100" CornerRadius="10" Margin="0,0,100,0" Cursor="Hand" x:Name="CallBtn"
                     Grid.Column="2" Grid.Row="2">
                 <Border.InputBindings>
-                    <MouseBinding MouseAction="LeftClick" Command="{Binding CallRaid}" CommandParameter="{Binding ElementName=CallBtn}"/>
+                    <MouseBinding MouseAction="LeftClick" Command="{Binding ProfilesRaid}" CommandParameter="{Binding ElementName=CallBtn}"/>
                 </Border.InputBindings>
-                <TextBlock Text="Call" Foreground="White" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center"/>
+                <TextBlock Text="Profiles" Foreground="White" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center"/>
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
                         <GradientStop Color="Transparent" Offset="0.0"/>
