--- a/MVVM/View/RaidView/JoinGuild.xaml
+++ b/MVVM/View/RaidView/JoinGuild.xaml
@@ -65,7 +65,7 @@
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0, 20"
                         HorizontalAlignment="Center">
-                <TextBlock Text="Invite link / code" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite"/>
+                <TextBlock Text="Invite link / code" Margin="10,50,0,5" FontSize="15" Foreground="AntiqueWhite"/>
                 <TextBox Style="{DynamicResource ModernTextBoxOther}" HorizontalAlignment="Left" Padding="5,0,0,10"
                          Height="25" Width="300" Margin="0,0,0,0" x:Name="InviteIn"/>
                 <TextBlock Text="Reaction Verification Channel ID" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" x:Name="ChannelLabel"
@@ -78,12 +78,17 @@
                           Foreground="AntiqueWhite" Padding="5,0,0,0"
                           FontSize="12" FontFamily="/Fonts/#Poppins" Click="ReactionCB_Click"/>
                 <CheckBox Content="Bypass captcha verification" Height="20"
-                          Margin="0,10" x:Name="CaptchaCB"
+                          Margin="0,10" x:Name="CaptchaCB" Visibility="Collapsed"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                           Foreground="AntiqueWhite" Padding="5,0,0,0"
                           FontSize="12" FontFamily="/Fonts/#Poppins"/>
                 <CheckBox Content="Bypass rules verification" Height="20"
                           Margin="0,10" x:Name="RulesCB"
+                          HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
+                          Foreground="AntiqueWhite" Padding="5,0,0,0"
+                          FontSize="12" FontFamily="/Fonts/#Poppins"/>
+                <CheckBox Content="Use proxies" Height="20"
+                          Margin="0,10" x:Name="ProxiesCB"
                           HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                           Foreground="AntiqueWhite" Padding="5,0,0,0"
                           FontSize="12" FontFamily="/Fonts/#Poppins"/>
@@ -93,7 +98,7 @@
                         <ColumnDefinition Width="50"/>
                         <ColumnDefinition Width="150"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="Delay" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="0"/>
+                    <TextBlock Text="Delay (ms)" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="0"/>
                     <TextBox Style="{DynamicResource ModernTextBoxOther}" Grid.Column="0" HorizontalAlignment="Left" Padding="5,0,0,0"
                          Height="25" Width="100" Margin="0,0,0,0" x:Name="DelayIn"/>
                     <TextBlock Text="Tokens" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="2"/>
