--- a/MVVM/View/ProfilesView/bioProfiles.xaml
+++ b/MVVM/View/ProfilesView/bioProfiles.xaml
@@ -92,7 +92,8 @@
                     <TextBlock Text="Delay (ms)" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="0"/>
                     <TextBox Style="{DynamicResource ModernTextBoxOther}" Grid.Column="0" HorizontalAlignment="Left" Padding="5,0,0,0"
                          Height="25" Width="100" Margin="0,0,0,0" x:Name="DelayIn"/>
-                    <TextBlock Text="Max tokens" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="2"/>
+                    <TextBlock Text="Max tokens" Margin="5,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="2"
+                               ToolTip="Max number of tokens to use"/>
                     <TextBox Style="{DynamicResource ModernTextBoxOther}" Grid.Column="2" HorizontalAlignment="Left" Padding="5,0,0,0"
                          Height="25" Width="90" Margin="0,0,0,0" x:Name="TokensIn"/>
                 </Grid>
