--- a/MVVM/View/tokens.xaml
+++ b/MVVM/View/tokens.xaml
@@ -30,6 +30,27 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}" x:Key="ReloadStyle">
+            <Style.Setters>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="{TemplateBinding Background}">
+                                <Image Source="/Images/reload.png" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                    Stretch="Fill" Grid.Column="1"
+                                    Height="15" Width="15"/>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="Background" Value="Transparent"/>
+            </Style.Setters>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#141114"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
         <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
             <Setter Property="OverridesDefaultStyle" Value="true"/>
             <Setter Property="IsTabStop" Value="false"/>
@@ -159,10 +180,12 @@
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
-            <StackPanel Orientation="Horizontal" Margin="10" Height="50">
-                <Button Content="Select All" Click="Select_Click" Margin="105,0,20,0"/>
+            <StackPanel Orientation="Horizontal" Margin="10" Height="50" Width="550">
+                <Button Content="Select All" Click="Select_Click" Margin="85,0,20,0"/>
                 <Button Content="Deselect All" Click="Deselect_Click" Margin="20,0"/>
                 <Button Content="Checker" Click="Checker_Click" Margin="20,0"/>
+                <Button Style="{StaticResource ReloadStyle}" Click="Reload_Click" Height="30" Width="30"
+                        Margin="40, 0, 10, 20"/>
             </StackPanel>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Height="450" Margin="30">
@@ -174,6 +197,9 @@
                     FontSize="15" Click="Remove_Click"/>
             <Button Content="Open File" Padding="20" Margin="0,20"
                     FontSize="15" Click="OpenFile_Click"/>
+            <TextBlock Text="0 Tokens" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="TkCounter"
+                   Foreground="AntiqueWhite" FontSize="15" FontFamily="/Fonts/#Poppins" TextWrapping="WrapWithOverflow"
+                       Margin="0, 35"/>
         </StackPanel>
     </Grid>
 </UserControl>
