--- a/MVVM/View/MassDM.xaml
+++ b/MVVM/View/MassDM.xaml
@@ -107,7 +107,7 @@
                                 Margin="0,10" x:Name="EmbedCB"
                                 HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                                 Foreground="AntiqueWhite" Padding="5,0,0,0"
-                                FontSize="12" FontFamily="/Fonts/#Poppins"/>
+                                FontSize="12" FontFamily="/Fonts/#Poppins" Click="EmbedCB_Click"/>
                             <CheckBox Content="Use proxies" Height="20"
                                 Margin="0,10" x:Name="ProxyCB" IsChecked="True"
                                 HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
@@ -144,7 +144,7 @@
                     FontSize="15" Click="Start_Click"/>
                     <Button Content="Stop" Padding="20" Margin="0,20" x:Name="StopBtn"
                     FontSize="15" Click="Stop_Click"/>
-                    <TextBlock Text="Message" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="2"/>
+                    <TextBlock Text="Message" Margin="10,10,0,5" FontSize="15" Foreground="AntiqueWhite" Grid.Column="2" x:Name="MessageLbl"/>
                     <TextBox Style="{DynamicResource ModernTextBoxMultiLine}" Grid.Column="2" HorizontalAlignment="Center" Padding="5,0,0,0" VerticalContentAlignment="Top" HorizontalContentAlignment="Left"
                          VerticalAlignment="Top"
                          Height="100" Width="180" Margin="0,0,0,0" x:Name="MessageIn"
